# myinvois-python

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
scripts/: check_dist.py  extract_codes.py  gen_signed_golden.php
src/myinvois/: __init__.py  _async_auth.py  _async_client.py  auth.py  client.py  config.py  exceptions.py
src/myinvois/codes/: __init__.py
src/myinvois/codes/_data/: classification.json  countries.json  currencies.json  msic.json  payment_means.json  states.json  taxes.json  units.json
src/myinvois/services/: async_document_types.py  async_documents.py  async_notifications.py  async_submissions.py  async_taxpayer.py  document_types.py  documents.py  models.py  notifications.py  submissions.py  taxpayer.py
src/myinvois/ubl/: __init__.py  _base.py  address.py  common.py  documents.py  invoice.py  line.py  monetary.py  party.py  payment.py  reference.py  tax.py
src/myinvois/ubl/builders/: __init__.py  _number.py  _prefixes.py  _specs.py  json.py  xml.py
src/myinvois/ubl/signing/: __init__.py  _cert.py  _common_attrs.py  _digests.py  _json.py  _propsdigest_json.py  _propsdigest_xml.py  _xml.py  _xml_block.py
tests/fixtures/: golden_creditnote_unsigned.json  golden_creditnote_unsigned.xml  golden_invoice_signed.json  golden_invoice_signed.xml  golden_invoice_unsigned.xml
tests/fixtures/cert/: README.md  dummy_signing_cert.pem  dummy_signing_key.pem
tests/live/: conftest.py  test_sandbox.py
tests/unit/: test_async_auth.py  test_async_client.py  test_auth.py  test_client.py  test_codes.py  test_config.py  test_document_classes.py  test_document_state.py  test_document_type_parity.py  test_document_types.py  test_documents.py  test_envelope_builder.py  test_exceptions.py  test_notifications.py  test_signer_cert.py  test_signer_json.py  test_signer_xml.py  test_submissions.py  test_taxpayer.py  test_ubl_models.py  test_xml_envelope_builder.py
