[project]
name = "myinvois"
version = "0.1.0"
description = "Unofficial Python SDK for the Malaysian MyInvois (LHDN) e-Invoice system"
readme = "README.md"
authors = [
    { name = "Latiff Danieyal", email = "danieyal123@gmail.com" }
]
license = "MIT"
requires-python = ">=3.11"
keywords = ["myinvois", "lhdn", "e-invoice", "malaysia", "ubl", "invoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "lxml>=5.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/danieyal/myinvois-python"
Documentation = "https://github.com/danieyal/myinvois-python#readme"
Repository = "https://github.com/danieyal/myinvois-python"
Issues = "https://github.com/danieyal/myinvois-python/issues"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Ship the py.typed marker (for mypy/PEP 561) and the JSON code tables.
# Without this, installed wheels would drop py.typed and _data/*.json, and
# importlib.resources lookups in the codes module would fail at runtime.
data-includes = [
    "src/myinvois/py.typed",
    "src/myinvois/codes/_data/*.json",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "lxml-stubs>=0.5.1",
    "pyright[nodejs]>=1.1.400",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF", "PL"]
ignore = [
    "PLR0913",   # too many args allowed; services proxy many filters
    "PLR2004",   # "magic numbers" common in test/URL constants
    "SIM108",    # explicit if/else often clearer than ternary in multi-branch
    "PLC0415",   # lazy imports break circular deps on service registry
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = false
warn_required_dynamic_outputs = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "live: tests requiring real MyInvois sandbox credentials (deselect with -m 'not live')",
]
